# testspectra

./: .gitignore  API_URL_MIGRATION.md  CHANGELOG.md  FRONTEND_BACKEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NEXT_RELEASE_CHECKLIST.md  NEXT_STEPS.md  PRERELEASE_QUICK_REF.md  QUICK_START_UPDATER.md  README.md  RELEASE.md  SAMPLE_TEST_CASES.md  UPDATER_SETUP_SUMMARY.md  VERSION_MANAGEMENT.md  WORKFLOW_VERSION_SYNC.md  create-demo-test-case.js  create-full-test-case.js  example_test_case_with_shared_step.json  index.html  inspector.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-case-example.json  vite.config.inspector.ts  vite.config.ts
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  DOCKER_DEPLOY.md  Dockerfile  LOCAL_SETUP.md  QUICKSTART.md  README.md  backup-db.sh  db-queries.sh  docker-build.sh  docker-compose.yml  docker-down.sh  docker-up.sh  restore-db.sh  start-services.sh  stop-services.sh
backend/grpc-proxy/: .env.example  Cargo.toml  build.rs
backend/grpc-proxy/src/: handlers.rs  main.rs
backend/migrations/: 20241126001_create_users_table.sql  20241126002_create_test_cases.sql  20241126003_add_last_active.sql  20241126004_create_test_suites.sql  20241126005_update_test_steps_schema.sql  20241126006_add_user_git_fields.sql  20241128001_add_execution_order.sql  20241201001_cleanup_action_params.sql  20241202001_create_test_case_reviews.sql  20241202002_create_notifications.sql  20241202003_add_review_status_to_test_cases.sql  20241202004_add_test_case_created_notification_type.sql  20241202005_add_test_case_revised_notification_type.sql  20241202006_add_pending_revision_status.sql  20241204001_add_submitted_for_review_at.sql  20250110001_create_shared_steps.sql  20250110002_add_unique_shared_steps_name.sql  20250110003_step_type_enum.sql  20250110004_remove_expected_outcome.sql  20260111001_make_action_type_nullable.sql  20260111002_update_priority_to_pascal_case.sql  20260111003_update_automation_to_pascal_case.sql  20260111004_update_case_type_to_pascal_case.sql  20260111005_update_invalid_case_type_to_positive.sql  20260111006_update_invalid_automation_to_manual.sql  20260111007_update_invalid_priority_to_medium.sql  20260302001_create_project_configurations.sql
backend/src/: auth.rs  config.rs  error.rs  main.rs  maintenance.rs  websocket.rs
backend/src/handlers/: action_definition.rs  mod.rs  notification.rs  project_config.rs  review.rs  shared_step.rs  test_case.rs  test_step.rs  test_suite.rs  user.rs  version.rs  (+1 more)
backend/user-service/: .env.example  Cargo.toml  build.rs
(+185 files in other folders)
