[package]
name = "grpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
